Resolves: tdf#125109 prefer edit format's acceptance patterns and YMD order

Change-Id: I4036061b9e8f01d99f04f20dfbbd2cf23d3a9b59